2008-07-13  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Tokens.cs: Backported some nrefactory
	  changes.

2008-07-10  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Tokens.cs: Added some stuff from newer
	  nrefactory. To support c# 3.0 we need to update it to a newer
	  version (when the new dom works I'll do it - our changes in
	  nrefactory  aren't used anymore because all information is
	  retrieved by mcs and nrefactory only get's used as an expression
	  parser).

2008-04-22  Michael Hutchinson  <mhutchinson@novell.com>

	* Project/Src/Lexer/CSharp/Lexer.cs: Remove debug console write. 

2008-04-18  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: fixed 'Bug 379219 - Code folding
	  issue with multiple comment lines'.

2008-04-10  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs,
	  Project/Src/Lexer/Special/SpecialTracker.cs,
	  Project/Src/Lexer/Special/TagComment.cs,
	  Project/Src/Lexer/Special/Comment.cs,
	  Project/Src/Lexer/VBNet/Lexer.cs: Comments now know if they start a
	  line.

2008-04-02  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs, Project/Src/Ast/Generated.cs:
	  fixed comment positioning.

2008-03-31  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: Corrected comment end position.

2007-11-16  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG, Project/Src/Parser/CSharp/Parser.cs,
	  Project/Src/Parser/CSharp/CSharpParser.cs: Fixed "Bug 341330 - Problem
	  with code completion and Generics".

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* NRefactory.mdp: Project file names updated by change in MD path functions.

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: fixed compilation error.

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: Fixed "Bug 331772 - Unable to handle
	  conditional class definition".