@@ -1,3 +1,12 @@
+2008-07-28  Mike Krüger <mkrueger@novell.com> 
+
+	* Project/Src/Lexer/CSharp/Lexer.cs,
+	  Project/Src/Lexer/Special/SpecialTracker.cs,
+	  Project/Src/Lexer/Special/TagComment.cs,
+	  Project/Src/Lexer/Special/Comment.cs,
+	  Project/Src/Lexer/VBNet/Lexer.cs: Applied some custom nrefactory
+	  changes.
+
 2008-07-13  Mike Krüger <mkrueger@novell.com> 
 
 	* Project/Src/Lexer/CSharp/Tokens.cs: Backported some nrefactory
